--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>ChatBot (Entrenado) - SENATI</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/jpg" href="https://storage.googleapis.com/media.helloumi.com/36783/channels/QM84JKJZK4PNDEB57CEXI9K3V4YNF0XB.png"/>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
   <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
